# i2c-tools

./: .gitignore  CMakeLists.txt
i2c-bus/: CMakeLists.txt
i2c-bus/inc/i2c-bus/: i2c.hpp  i2c_utils.h
i2c-bus/src/: i2c.cpp  i2c_utils.c
i2c-bus/tests/: CMakeLists.txt  read_whoami.cpp
tools/: CMakeLists.txt
tools/tests/: CMakeLists.txt  i2c_readreg.c  tags
